# lumen

./: .gitignore  CMakeLists.txt  README.md  run.sh  test.py  test_model.py
examples/: CMakeLists.txt  benchmark.cpp  graph.cpp  main.cpp
include/lumen/: graph.hpp  lumen.hpp  onnx_importer.hpp  op_registry.hpp
models/: mnist.onnx
python/: setup.py
python/lumen/: __init__.py  core.py  nn.py
src/: CMakeLists.txt
src/backends/cpu/: cpu_backend.cpp
src/backends/cuda/: cuda_backend.cu
src/backends/gpu/: compute.metal  metal_backend.mm
src/core/: graph.cpp  onnx_importer.cpp  op_registry.cpp  router.cpp  runtime.cpp  runtime.mm
src/python/: bindings.cpp
tests/: CMakeLists.txt  onnx_tests.cpp  op_parity_test.cpp  unit_tests.cpp
